<resources>
    <string name="app_name">Alpha Fitness</string>
    <string name="title_activity_record_workout">Record Workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="record_workout">Record Workout</string>
    <string name="edit_profile_button">Edit profile button</string>
    <string name="distance">Distance</string>
    <string name="distance_zero_value">0.0</string>
    <string name="duration">Duration</string>
    <string name="imperial_distance_unit">Miles</string>
    <string name="time_zero_value">0:00:00</string>
    <string name="time_units">Min/Sec</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
